--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "hint": "^6.1.4",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.2.5",
+    "jest-environment-jsdom": "^27.2.5",
+    "jest-environment-jsdom-global": "^3.0.0",
     "style-loader": "^3.3.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
